--- a/playbooks/roles/reposync/tasks/main.yml
+++ b/playbooks/roles/reposync/tasks/main.yml
@@ -56,7 +56,7 @@
     async: 3600
     poll: 10
 
-  - name:  Make sure yum repo is unmounted
-    mount:
-      path: "/yum_repo"
-      state: "unmounted"
+  #- name:  Make sure yum repo is unmounted
+  #  mount:
+  #    path: "/yum_repo"
+  #    state: "unmounted"
