replace ignore_errors with fail module

--- a/playbooks/roles/reposync/tasks/main.yml
+++ b/playbooks/roles/reposync/tasks/main.yml
@@ -20,7 +20,8 @@
     shell: reposync -d --gpgcheck -l --repoid=base --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    ignore_errors: yes
+    fail: msg="The execution has failed because of errors."
+    when: flag == "failed"
 
   - name: Update CentOS 7 Base Repository
     shell: createrepo --update {{repo_path}}/base
@@ -31,7 +32,8 @@
     shell: reposync -d --gpgcheck -l --repoid=epel --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    ignore_errors: yes    
+    fail: msg="The execution has failed because of errors."
+    when: flag == "failed"
 
   - name: Update CentOS 7 EPEL Repository
     shell: createrepo --update {{repo_path}}/epel
@@ -42,7 +44,8 @@
     shell: reposync -d --gpgcheck -l --repoid=updates --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    ignore_errors: yes
+    fail: msg="The execution has failed because of errors."
+    when: flag == "failed"
 
   - name: Update CentOS 7 Updates Repository
     shell: createrepo --update {{repo_path}}/updates
@@ -53,7 +56,8 @@
     shell: reposync -d --gpgcheck -l --repoid=extras --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    ignore_errors: yes
+    fail: msg="The execution has failed because of errors."
+    when: flag == "failed"
 
   - name: Update CentOS 7 Extras Repository
     shell: createrepo --update {{repo_path}}/extras
