back to ignore_errors and put extras before updates

--- a/playbooks/roles/reposync/tasks/main.yml
+++ b/playbooks/roles/reposync/tasks/main.yml
@@ -20,8 +20,7 @@
     shell: reposync -d --gpgcheck -l --repoid=base --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    fail: msg="The execution has failed because of errors."
-    when: flag == "failed"
+    ignore_errors: yes
 
   - name: Update CentOS 7 Base Repository
     shell: createrepo --update {{repo_path}}/base
@@ -32,23 +31,10 @@
     shell: reposync -d --gpgcheck -l --repoid=epel --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    fail: msg="The execution has failed because of errors."
-    when: flag == "failed"
+    ignore_errors: yes    
 
   - name: Update CentOS 7 EPEL Repository
     shell: createrepo --update {{repo_path}}/epel
-    async: 3600
-    poll: 10
-
-  - name: Sync CentOS 7 Updates Repository
-    shell: reposync -d --gpgcheck -l --repoid=updates --download_path={{repo_path}} --downloadcomps --download-metadata
-    async: 3600
-    poll: 10
-    fail: msg="The execution has failed because of errors."
-    when: flag == "failed"
-
-  - name: Update CentOS 7 Updates Repository
-    shell: createrepo --update {{repo_path}}/updates
     async: 3600
     poll: 10
 
@@ -56,13 +42,25 @@
     shell: reposync -d --gpgcheck -l --repoid=extras --download_path={{repo_path}} --downloadcomps --download-metadata
     async: 3600
     poll: 10
-    fail: msg="The execution has failed because of errors."
-    when: flag == "failed"
+    ignore_errors: yes
 
   - name: Update CentOS 7 Extras Repository
     shell: createrepo --update {{repo_path}}/extras
     async: 3600
     poll: 10
+
+  - name: Sync CentOS 7 Updates Repository
+    shell: reposync -d --gpgcheck -l --repoid=updates --download_path={{repo_path}} --downloadcomps --download-metadata
+    async: 3600
+    poll: 10
+    ignore_errors: yes
+
+  - name: Update CentOS 7 Updates Repository
+    shell: createrepo --update {{repo_path}}/updates
+    async: 3600
+    poll: 10
+
+
 
   #- name:  Make sure yum repo is unmounted
   #  mount:
